--- a/app/src/main/res/layout/fragment_platforms.xml
+++ b/app/src/main/res/layout/fragment_platforms.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PlatformsFragment">
 
+    <ImageView
+        android:scaleType="centerCrop"
+        android:src="@mipmap/background_platform"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
+
     <TextView
+        android:paddingStart="16dp"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Plataformas" />
 
-</FrameLayout>
+</LinearLayout>
