--- a/app/src/main/res/layout/fragment_elevator.xml
+++ b/app/src/main/res/layout/fragment_elevator.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ElevatorFragment">
+    tools:context=".ElevatorFragment"
+    android:orientation="vertical">
+
+    <ImageView
+        android:scaleType="centerCrop"
+        android:src="@mipmap/elevator_background"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
 
     <TextView
+        android:fontFamily="@font/vegur_bold"
+        android:paddingStart="16dp"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Elevador" />
+        android:text="Plataformas" />
 
-</FrameLayout>
+</LinearLayout>
