--- a/app/src/main/res/layout/fragment_platforms.xml
+++ b/app/src/main/res/layout/fragment_platforms.xml
@@ -13,6 +13,7 @@
         android:layout_height="150dp" />
 
     <TextView
+        android:fontFamily="@font/vegur_bold"
         android:paddingStart="16dp"
         android:textSize="30sp"
         android:layout_width="match_parent"
