--- a/app/src/main/res/layout/fragment_tower_crane.xml
+++ b/app/src/main/res/layout/fragment_tower_crane.xml
@@ -13,12 +13,72 @@
         android:layout_height="150dp" />
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/vegur_bold"
         android:paddingStart="16dp"
-        android:textSize="30sp"
+        android:text="@string/towercraneIb"
+        android:textSize="30sp" />
+
+    <EditText
+        android:fontFamily="@font/vegur_bold"
+        android:id="@+id/nameinputEt"
+        android:text="Ingrese su nombre"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/towercraneIb" />
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:fontFamily="@font/vegur_bold"
+        android:id="@+id/mailinputEt"
+        android:text="Ingrese su correo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:fontFamily="@font/vegur_bold"
+        android:padding="16dp"
+        android:textSize="18sp"
+        android:text="Seleccione el modelo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <RadioGroup
+        android:fontFamily="@font/vegur_bold"
+        android:paddingStart="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:fontFamily="@font/vegur_bold"
+            android:text="GP 40.10 (40 metros de pluma y 1 tonelada en punta)"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:fontFamily="@font/vegur_bold"
+            android:text="GP 45.11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:fontFamily="@font/vegur_bold"
+            android:text="GP 51.13"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:fontFamily="@font/vegur_bold"
+            android:text="GP 54.25"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:fontFamily="@font/vegur_bold"
+            android:text="PT 563.12"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </RadioGroup>
 
 
 
