--- a/app/src/main/res/layout/fragment_tower_crane.xml
+++ b/app/src/main/res/layout/fragment_tower_crane.xml
@@ -6,38 +6,46 @@
     android:orientation="vertical"
     tools:context=".TowerCraneFragment">
 
-    <ImageView
-        android:scaleType="centerCrop"
-        android:src="@mipmap/background_tower_cranes"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/vegur_bold"
-        android:paddingStart="16dp"
-        android:text="@string/towercraneIb"
-        android:textSize="30sp" />
+        <ImageView
+            android:scaleType="centerCrop"
+            android:src="@mipmap/background_tower_cranes"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/vegur_bold"
+            android:text="@string/towercraneIb"
+            android:textSize="30sp" />
+    </FrameLayout>
 
     <EditText
+        android:paddingStart="16sp"
+        android:hint="Ingrese su nombre"
+        android:textSize="16sp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/nameinputEt"
-        android:text="Ingrese su nombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
+        android:paddingStart="16sp"
+        android:textSize="16sp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/mailinputEt"
-        android:text="Ingrese su correo"
+        android:hint="Ingrese su correo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:fontFamily="@font/vegur_bold"
         android:padding="16dp"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:text="Seleccione el modelo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -53,6 +61,7 @@
             android:text="GP 40.10 (40 metros de pluma y 1 tonelada en punta)"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <!--al apretar la alternativa, que muestre la descripcion-->
 
         <RadioButton
             android:fontFamily="@font/vegur_bold"
@@ -79,6 +88,12 @@
             android:layout_height="wrap_content" />
 
     </RadioGroup>
+
+    <Button
+        android:id="@+id/equipmentquoteBtn"
+        android:text="COTIZAR EQUIPO"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 
