--- a/app/src/main/res/layout/fragment_apply.xml
+++ b/app/src/main/res/layout/fragment_apply.xml
@@ -21,7 +21,7 @@
         android:fontFamily="@font/vegur_bold"
         android:visibility="invisible"
         android:id="@+id/nameEt"
-        android:text="@string/nameEt"
+        android:hint="@string/nameEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -29,7 +29,7 @@
         android:fontFamily="@font/vegur_bold"
         android:visibility="invisible"
         android:id="@+id/phoneEt"
-        android:text="@string/phoneEt"
+        android:hint="@string/phoneEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -37,19 +37,13 @@
         android:fontFamily="@font/vegur_bold"
         android:visibility="invisible"
         android:id="@+id/mailEt"
-        android:text="@string/mailEt"
+        android:hint="@string/mailEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/interestareaEt"
         android:fontFamily="@font/vegur_bold"
-        android:visibility="invisible"
-        android:text="@string/interestareaEt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
