--- a/app/src/main/res/layout/fragment_tower_crane.xml
+++ b/app/src/main/res/layout/fragment_tower_crane.xml
@@ -21,6 +21,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/vegur_bold"
             android:text="@string/towercraneIb"
+            android:padding="8dp"
+            android:layout_gravity="bottom"
             android:textSize="30sp" />
     </FrameLayout>
 
