--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#d32e12</color>
     <color name="colorPrimaryDark">#a1230e</color>
     <color name="colorAccent">#18b423</color>
+    <color name="textcolorDark">#000000</color>
+
 </resources>
