--- a/app/src/main/res/layout/activity_apply.xml
+++ b/app/src/main/res/layout/activity_apply.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ApplyFragment"
+    tools:context=".ApplyActivity"
     android:orientation="vertical">
 
     <EditText
+        android:inputType="textPersonName"
+        android:padding="16dp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/nameEt"
         android:hint="@string/nameEt"
@@ -14,6 +16,8 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:inputType="phone"
+        android:padding="16dp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/phoneEt"
         android:hint="@string/phoneEt"
@@ -21,6 +25,8 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:inputType="textEmailAddress"
+        android:padding="16dp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/mailEt"
         android:hint="@string/mailEt"
@@ -28,6 +34,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:padding="16dp"
         android:id="@+id/interestareaEt"
         android:fontFamily="@font/vegur_bold"
         android:layout_width="match_parent"
@@ -41,27 +48,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:paddingLeft="20dp">
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp">
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Administración"/>
+            android:text="@string/administrationRb"/>
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Operadores"/>
+            android:text="@string/operatorsRb"/>
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Electromecanica"/>
+            android:text="@string/electromechanicRb"/>
 
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Operaciones"/>
+            android:text="@string/operationsRb"/>
 
     </RadioGroup>
 
