--- a/app/src/main/res/layout/fragment_elevator.xml
+++ b/app/src/main/res/layout/fragment_elevator.xml
@@ -6,18 +6,97 @@
     tools:context=".ElevatorFragment"
     android:orientation="vertical">
 
-    <ImageView
-        android:scaleType="centerCrop"
-        android:src="@mipmap/elevator_background"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:alpha="0.9"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/elevator_background"
+            android:layout_width="match_parent"
+            android:layout_height="150dp" />
+
+        <TextView
+            android:textColor="@color/textcolorDark"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/vegur_bold"
+            android:text="@string/elevatorIb"
+            android:padding="8dp"
+            android:layout_gravity="bottom"
+            android:textSize="30sp" />
+    </FrameLayout>
+
+
+    <EditText
+        android:inputType="textPersonName"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:hint="Ingrese su nombre"
+        android:textSize="16sp"
+        android:fontFamily="@font/vegur_bold"
+        android:id="@+id/nameinputEt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:inputType="textEmailAddress"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:textSize="16sp"
+        android:fontFamily="@font/vegur_bold"
+        android:id="@+id/mailinputEt"
+        android:hint="Ingrese su correo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:fontFamily="@font/vegur_bold"
         android:paddingStart="16dp"
-        android:textSize="30sp"
+        android:paddingEnd="16dp"
+        android:textSize="16sp"
+        android:text="Seleccione el modelo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Elevador" />
+        android:layout_height="wrap_content" />
+
+    <RadioGroup
+        android:id="@+id/elevatorsRg"
+        android:fontFamily="@font/vegur_bold"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:tag="Carga maxima 1.500 kilos o 12 personas"
+            android:id="@+id/ecp1500Rb"
+            android:fontFamily="@font/vegur_bold"
+            android:text="ECP-1500"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:tag="Carga maxima 2.000 kilos o 18 personas"
+            android:id="@+id/ecp2000Rb"
+            android:fontFamily="@font/vegur_bold"
+            android:text="ECP-2000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </RadioGroup>
+
+    <Button
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:fontFamily="@font/vegur_bold"
+        android:id="@+id/equipmentquoteBtn"
+        android:text="COTIZAR EQUIPO"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+
+
 
 </LinearLayout>
