--- a/app/src/main/res/layout/fragment_tower_crane.xml
+++ b/app/src/main/res/layout/fragment_tower_crane.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:alpha="0.9"
             android:scaleType="centerCrop"
             android:src="@mipmap/background_tower_cranes"
             android:layout_width="match_parent"
@@ -59,6 +60,7 @@
         android:layout_height="wrap_content" />
 
     <RadioGroup
+        android:id="@+id/towercraneRg"
         android:fontFamily="@font/vegur_bold"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -66,31 +68,40 @@
         android:layout_height="wrap_content">
 
         <RadioButton
+            android:id="@+id/gp4010Rb"
+            android:tag="Largo pluma 40 metros y carga en punta 1 ton"
             android:fontFamily="@font/vegur_bold"
-            android:text="GP 40.10 (40 metros de pluma y 1 tonelada en punta)"
+            android:text="GP 40.10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <!--al apretar la alternativa, que muestre la descripcion-->
 
         <RadioButton
+            android:id="@+id/gp4511Rb"
+            android:tag="Largo pluma 45 metros y carga en punta 1.1 ton"
             android:fontFamily="@font/vegur_bold"
             android:text="GP 45.11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <RadioButton
+            android:id="@+id/gp5113Rb"
+            android:tag="Largo pluma 51 metros y carga en punta 1.3 ton"
             android:fontFamily="@font/vegur_bold"
             android:text="GP 51.13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <RadioButton
+            android:id="@+id/gp5425Rb"
+            android:tag="Largo pluma 54 metros y carga en punta 2.5 ton"
             android:fontFamily="@font/vegur_bold"
             android:text="GP 54.25"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <RadioButton
+            android:id="@+id/pt56312Rb"
+            android:tag="Largo pluma 63 metros y carga en punta 1.2 ton"
             android:fontFamily="@font/vegur_bold"
             android:text="PT 563.12"
             android:layout_width="match_parent"
