--- a/app/src/main/res/layout/fragment_forklift.xml
+++ b/app/src/main/res/layout/fragment_forklift.xml
@@ -27,6 +27,14 @@
             android:padding="8dp"
             android:layout_gravity="bottom"
             android:textSize="30sp" />
+
+        <TextView
+            android:layout_gravity="bottom"
+            android:background="@color/blackcolor"
+            android:alpha="0.3"
+            android:textColor="@color/textcolorDark"
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
     </FrameLayout>
 
     <EditText
