--- a/app/src/main/res/layout/fragment_forklift.xml
+++ b/app/src/main/res/layout/fragment_forklift.xml
@@ -26,7 +26,7 @@
             android:text="@string/forkliftIb"
             android:padding="8dp"
             android:layout_gravity="bottom"
-            android:textSize="30sp" />
+            android:textSize="35sp" />
 
         <TextView
             android:layout_gravity="bottom"
@@ -42,7 +42,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:hint="Ingrese su nombre"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/nameinputEt"
         android:layout_width="match_parent"
@@ -52,7 +52,7 @@
         android:inputType="textEmailAddress"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:fontFamily="@font/vegur_bold"
         android:id="@+id/mailinputEt"
         android:hint="Ingrese su correo"
@@ -63,7 +63,7 @@
         android:fontFamily="@font/vegur_bold"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:text="Seleccione el modelo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -77,15 +77,16 @@
         android:layout_height="wrap_content">
 
         <RadioButton
+            android:textSize="14sp"
             android:id="@+id/ec1000Rb"
             android:fontFamily="@font/vegur_bold"
             android:tag="Carga maxima 1.000 kilos"
             android:text="EC-1000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <!--al apretar la alternativa, que muestre la descripcion-->
 
         <RadioButton
+            android:textSize="14sp"
             android:id="@+id/ec1550Rb"
             android:tag="Carga maxima 1.550 kilos"
             android:fontFamily="@font/vegur_bold"
@@ -94,6 +95,7 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
+            android:textSize="14sp"
             android:id="@+id/ec1700Rb"
             android:tag="Carga maxima 1.700 kilos"
             android:fontFamily="@font/vegur_bold"
@@ -104,11 +106,12 @@
     </RadioGroup>
 
     <Button
+        android:textSize="18sp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:fontFamily="@font/vegur_bold"
-        android:id="@+id/equipmentquoteBtn"
-        android:text="COTIZAR EQUIPO"
+        android:id="@+id/flquoteBtn"
+        android:text="@string/quoteBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
