--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,20 +14,24 @@
 
     <ImageView
         android:id="@+id/pingonicon"
-        android:padding="16dp"
-        android:src="@mipmap/pingon_icon"
         android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="28dp"
+        android:padding="20dp"
+        android:src="@mipmap/pingon_icon" />
 
     <TextView
-        android:textSize="30sp"
-        android:fontFamily="@font/vegur_bold"
-        android:layout_marginTop="12dp"
-        android:padding="16dp"
         android:id="@+id/texttitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="43dp"
         android:layout_toEndOf="@+id/pingonicon"
+        android:fontFamily="@font/vegur_bold"
+        android:padding="8dp"
         android:text="@string/app_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="35sp" />
 
 </RelativeLayout>
